--- a/mlops/webserver/templates/index.html
+++ b/mlops/webserver/templates/index.html
@@ -60,6 +60,8 @@
           🔍 검색
         </button>
       </form>
+      <h3 class="text-lg font-semibold text-gray-600 mb-2">🔗 연관 단어</h3>
+      <div id="relatedWordList" class="flex flex-wrap gap-2 mt-1"></div>
     </section>
     <section>
       <h2 class="text-2xl font-bold text-green-700 mb-4">📁 기존 데이터 다운로드</h2>
@@ -82,6 +84,7 @@
     const logoutBtn = document.getElementById('logoutBtn');
     const deleteBtn = document.getElementById('deleteBtn');
 
+    let relatedWord = [];
     let uploadedItems = [];
     let currentPage = 1;
     const itemsPerPage = 6;
@@ -205,14 +208,28 @@
 	})
         .then(res => res.json())
         .then(data => {
+	  relatedWord = data.related_word
           uploadedItems = data.results.map(item => ({
             title: item.file_name,
 	    path: item.real_path,
             desc: '',
             time: Date.now(),
           }));
+	  renderRelatedWord();
           renderDownloadList();
         });
+    }
+
+    function renderRelatedWord() {
+      const container = document.getElementById("relatedWordList");
+      container.innerHTML = '';
+
+      relatedWord.forEach(word => {
+        const span = document.createElement("span");
+        span.textContent = word;
+        span.className = "px-2 py-1 rounded border bg-gray-100 text-sm text-gray-700";
+        container.appendChild(span);
+      });
     }
 
     function renderDownloadList() {
